--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^4.2.0
   cloud_firestore: ^6.0.3
   provider: ^6.1.5+1
+  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
